# Inkshade-PDF-TTS

./: .gitignore  README.md  TODO.md  __init__.py  narrate.py  pipeline.py  pyproject.toml  requirements.txt  verify_core.py
core/: __init__.py
core/document/: __init__.py  pdf_reader.py
core/page/: __init__.py  models.py  page_model.py  text_layer.py
debug/: debug_audio_builder.py  debug_classifier.py  debug_layout_detector.py  debug_pdf_adapter.py  debug_reading_script.py  debug_tts_engine.py
layout/: __init__.py  block_matcher.py  classifier.py  feature_refiner.py  models.py
narration/: __init__.py  pipeline.py
narration/layout/: classifier.py  detector.py  feature_refiner.py  models.py  visualize.py
narration/script/: __init__.py  prosody_rules.py  reading_script.py
narration/tts/: __init__.py  audio_builder.py  base_engine.py  engine.py  kokoro_engine.py  model_manager.py  time_stretch.py
narration/utils/: __init__.py  pdf_adapter.py
script/: models.py  prosody_rules.py  reading_script.py  text_preprocessor.py
tests/: conftest.py  test_audio_builder.py  test_audio_builder_assembly.py  test_block_matcher.py  test_classifier.py  test_feature_refiner.py  test_layout_detector.py  test_layout_models.py  test_pdf_adapter.py  test_prosody_rules.py  test_reading_script.py  test_script_builder.py  test_text_preprocessor.py  test_tts_engine.py  test_tts_wav.py
tts/: audio_builder.py  engine.py
