[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkshade-narrate"
version = "0.1.0"
description = "Convert PDF documents into narrated audio using layout detection and TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kokoro>=0.9.2",
    "pillow==12.1.1",
    "pydub==0.25.1",
    "PyMuPDF==1.26.6",
    "soundfile>=0.13.0",
    "tqdm==4.67.3",
    "ultralytics==8.4.14",
]

[project.scripts]
narrate = "narrate:main"

[tool.setuptools]
py-modules = ["narrate"]
packages = ["core", "core.document", "core.page",
            "narration", "narration.layout", "narration.script",
            "narration.tts", "narration.utils"]
